// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile integration GET /api/profiles/:username with invalid username should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`profile integration GET /api/profiles/:username with logged in user should return a 200 1`] = `
Object {
  "profile": Object {
    "bio": null,
    "following": false,
    "image": "https://static.productionready.io/images/smiley-cyrus.jpg",
    "username": "iwo",
  },
}
`;

exports[`profile integration GET /api/profiles/:username without logged in user should return a 200 1`] = `
Object {
  "profile": Object {
    "bio": null,
    "following": false,
    "image": "https://static.productionready.io/images/smiley-cyrus.jpg",
    "username": "manba",
  },
}
`;
